[project]
name = "mr-monopoly"
version = "0.1.0"
description = "Monopoly bot"
readme = "README.md"
authors = [
    { name = "Cameron Matthew", email = "cameron@playerdata.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
mr-monopoly = "mr_monopoly:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
plugins = ["pydantic.mypy"]
